Change: サポーター機能（キャプチャ）

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,3 +75,4 @@ en:
       twitter-account: "Twitter account"
       avator: "Avator"
   bookmarklet: "Bookmark pages more easily. Drag this bookmarklet to the Bookmarks bar of your browser"
+  become_supporter? : 'Sorry, you can only use a Supporter. \nCan you become a Supporter?'
