--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -75,4 +75,5 @@ ja:
       twitter-account: "Twitterアカウント"
       avator: "アバター"
   bookmarklet: "ページをより簡単にブックマークするために、このブックマークレットをブラウザのブックマークバーにドラッグして登録しておきます"
+  become_supporter? : 'ごめんなさい、この機能はサポーターの方のみご利用いただけます。サポーターになっていただけますか？'
 
